# 2-oji-uzduotis-OP-II

./: CMakeLists.txt  Kursiokai.txt  My_lib.h  README.md  database-mastery-game.html  index.html  main.cpp  main_array.cpp  main_vector.cpp  package-lock.json  script.js  styles.css  tailwind.config.js
Doxygen/: Doxyfile
Doxygen/html/: _benchmark_8cpp.html  _funkcijos_8h.html  _funkcijos_8h_source.html  _isvedimai_8cpp.html  _ivedimai_8cpp.html  _main__h_8h.html  _main__h_8h_source.html  _my__lib_8h.html  _my__lib_8h_source.html  _r_e_a_d_m_e_8md.html  _rezultatai_8cpp.html  _strategija2_8cpp.html  _studentas_8cpp.html  _studentas_8h.html  _studentas_8h_source.html  _tikrinimai_8cpp.html  annotated.html  class_studentas-members.html  class_studentas.html  classes.html  classzmogus-members.html  classzmogus.html  dir_3af87512d6e71e856ad6ae9a4a9faf2a.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_7ac632feae2e4f1cf645bf83a8dfb035.html  dir_94f5d3ef344111898640d977a7441564.html  (+14 more)
Funkcijos/: Benchmark.cpp  Funkcijos.h  Isvedimai.cpp  Ivedimai.cpp  Main_h.h  My_lib.h  Rezultatai.cpp  Strategija2.cpp  Studentas.cpp  Studentas.h  Tikrinimai.cpp
Setup/: Setup.msi
fitness-app/: README.md  index.html  package-lock.json  package.json
smart-fridge-app/: .gitignore  LICENSE  PROJECT_STRUCTURE.md  SETUP.md  package.json
smart-fridge-pro/: README.md  index.html  package.json  tailwind.config.js
smart-fridge-ultimate/: FIXES.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
tests/: test.cpp
(+86 files in other folders)
